--- a/src/styles.css
+++ b/src/styles.css
@@ -1,35 +1,44 @@
 
 * {
     font-family: Helvetica, Arial, sans-serif;
-    background-color: rgb(234, 234, 234);
+    background-color: #101010;
   }
   
   body {
     padding: 60px;
+    margin: auto;
+    text-align: center;
+    width: auto;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
   }
   
   input {
     background-color: white;
-    border-radius: 5px;
-    border: 1px solid rgb(97, 32, 158);
+    border: none;
     color: black;
     font-size: 1.2rem;
     outline: none;
     padding: 10px 15px;
-    width: 100%;
+    width: 15em;
   }
   
   h1 {
     font-size: 3.5rem;
+    color: white;
   }
   
   h2 {
     font-size: 2.5rem;
+    color: white;
   }
   
   h3 {
     font-size: 2rem;
     margin-bottom: 5px;
+    color: white;
+    text-transform: uppercase;
   }
   
   .card-grid {
@@ -37,25 +46,19 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    padding: 0;
+    border: 0;
+    height: 100%;
+    margin-top: 1em;
   }
   
   .card {
-    align-content: center;
-    align-items: center;
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.03);
-    display: flex;
-    flex-direction: column;
-    height: 0%;  
     justify-content: center;
-    margin-bottom: 20px;
     margin-right: 20px;
-    overflow: hidden;  
   }
   
   .card p {
-    background-color: white;
+    color:white;
     flex: 1;
     font-size: 1.5rem;
     margin-top: 5px;
@@ -67,3 +70,163 @@
     width: 100%;
     max-height: 250px;  
   }
+  form{
+    width: 100%;
+    justify-content: center;
+    display: flex;
+  }
+.reset{
+    color: white;
+    background-image: linear-gradient(#0c0c0c, #222121), linear-gradient(272deg, #fa4ba2, rgb(204, 3, 204) 50%, #9853c4);
+    background-repeat: no-repeat;
+    background-size: 100% 100%, 100% 200%;
+    background-position: 0 0, 0 100%;
+    background-origin: padding-box, border-box;
+    animation: highlight 1s infinite alternate;
+    width: 15em;
+    border: 6px solid transparent;
+    box-sizing: border-box;
+    text-transform: uppercase;
+    font-weight: 900;
+    font-family: "Open Sans","Source Sans Pro",Helvetica,sans-serif;
+    font-size: 1em;
+    letter-spacing: 0.5em;
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    margin-top: 1em;
+}
+.reset:hover{
+  cursor:pointer;
+}
+.delete{
+  margin-top: 1em;
+    color: white;
+    background-image: linear-gradient(#0c0c0c, #222121), linear-gradient(272deg, #3ac1cb, rgb(71, 175, 127) 50%, #c9cc36);
+    background-repeat: no-repeat;
+    background-size: 100% 100%, 100% 200%;
+    background-position: 0 0, 0 100%;
+    background-origin: padding-box, border-box;
+    animation: highlight 1s infinite alternate;
+    width: 15em;
+    border: 6px solid transparent;
+    box-sizing: border-box;
+    text-transform: uppercase;
+    font-weight: 900;
+    font-family: "Open Sans","Source Sans Pro",Helvetica,sans-serif;
+    font-size: 1em;
+    letter-spacing: 0.5em;
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 12%;
+    margin: auto;
+    margin-top: 1em;
+}
+.delete:hover{
+  cursor:pointer;
+}
+
+.navbar{
+  display: flex;
+  justify-content: center;
+
+}
+
+  .menucontainer{
+    display:flex;
+    background: linear-gradient(to right, rgb(0, 204, 255), rgb(153, 51, 255) 31%, rgb(230, 70, 182) 52%, rgb(255, 249, 170) 77%, rgb(0, 255, 153), rgb(0, 204, 255)) 0% 50% / 200% 50%;
+    background: linear-gradient(to right, rgb(0, 204, 255), rgb(153, 51, 255) 31%, rgb(230, 70, 182) 52%, rgb(255, 249, 170) 77%, rgb(0, 255, 153), rgb(0, 204, 255)) 0% 50% / 200% 50%;
+    padding-bottom: 0.5em;
+    margin: 0;
+    padding-left: 0;
+    padding-right: 0;
+    }
+    .menulist{
+      display: inline;
+      list-style: none;
+      color:white;
+      display: inline-block;
+      padding: 13px 10px 13px 10px;
+      margin: -0.2em;
+      cursor: pointer;
+      transition: 0.2s;
+    }
+    .menulist:hover{
+      background-color:#ffffff00;
+    }
+    .dropdown {
+      position: relative;
+      display: inline-block;
+    }
+
+    .dropdown:hover{
+      cursor:pointer;
+    }
+    
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #f9f9f9;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      padding: 12px 16px;
+      z-index: 1;
+    }
+    
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+
+@media screen and (max-width: 700px) {
+  .menucontainer{
+    display:none;
+    }
+    .menulist{
+      display:none;
+      }
+      .navbar{
+        display: none;
+      }
+}
+
+.dropdown{
+  position: relative;
+}
+
+.dropdownBtn{
+  padding: 10px;
+    background-color: rgb(52, 51, 51);
+    font-weight: bold;
+    color: white;
+    user-select: none;
+    width: 9em;
+}
+
+.dropdownContent{
+  position: absolute;
+  top:110%;
+  left: 0;
+  background-color: rgb(52, 51, 51);
+  box-shadow: 3px 3px 10px 6px rgba(0,0,0,0.06);
+  font-weight: bold;
+  color: rgb(194, 192, 192);
+  width: 95%;
+  z-index: 2;
+}
+.dropdownItem{
+  padding: 10px;
+  user-select: none;
+
+
+}
+.dropdownItem:hover{
+  background-color:rgba(36, 35, 35, 0.04);
+  transition: background-color .1s ease-out;
+ cursor:pointer;
+}
+
+
